--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,2 +1,3 @@
 background-size : contain
 footnote: "{name : Manuel Fontan , email : manuel.fontan@mongodb.com , location : Dublin IE}"
+logo: mongodb-logo.jpg
