--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,3 +1,3 @@
 background-size : contain
 footnote: "{name : Manuel Fontan , email : manuel.fontan@mongodb.com , location : Dublin IE}"
-logo: assets/mongodb-logo.jpg
+logo: assets/mongodb-logo.png
