--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,3 +1,4 @@
 background-size : contain
 footnote: "{name : Manuel Fontan , email : manuel.fontan@mongodb.com , location : Dublin IE}"
 logo: assets/mongodb-logo.jpg
+revealjs: 3.4.1
